--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Salty-Coder/discordjs-pagination"
+    "url": "git+https://github.com/Salty-Coder/discordjs-pagination.git"
   },
   "devDependencies": {
     "create-ts-index": "^1.14.0",
@@ -30,5 +30,9 @@
   },
   "dependencies": {
     "discord.js": "^14.9.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/Salty-Coder/discordjs-pagination/issues"
+  },
+  "homepage": "https://github.com/Salty-Coder/discordjs-pagination#readme"
 }
