--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc"
   },
+  "files": ["dist"],
   "keywords": [
     "pagination",
     "discord.js",
@@ -26,10 +27,10 @@
   },
   "devDependencies": {
     "create-ts-index": "^1.14.0",
-    "typescript": "^4.7.4"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "discord.js": "^14.9.0"
+    "discord.js": "^14.21.0"
   },
   "bugs": {
     "url": "https://github.com/Salty-Coder/discordjs-pagination/issues"
